--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@comercti/icons-hmg": "^0.0.34",
-    "@comercti/react-components-hmg": "^0.0.34",
+    "@comercti/icons-hmg": "^0.0.35",
+    "@comercti/react-components-hmg": "^0.0.35",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "veaury": "^2.6.2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
